--- a/robot_msgs/CMakeLists.txt
+++ b/robot_msgs/CMakeLists.txt
@@ -48,6 +48,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
+  JointEstimates.msg
+  JointEstimatesStamped.msg
   JointPose.msg
   JointPoseStamped.msg
 )
